--- a/ieee754.html
+++ b/ieee754.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <title>IEEE 754 calc</title>
+  <meta charset="UTF-8">
+  <title>IEEE 754 calculator</title>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="ieee754.js"></script>
   <style>
@@ -78,12 +79,12 @@
 
   <table>
     <tr>
-      <th>precise</th>
-      <td id="val_precise">1</td>
+      <th>represented</th>
+      <td id="val_represented">1.0000000000</td>
     </tr>
     <tr>
-      <th>output</th>
-      <td id="val_output">1</td>
+      <th>precise decimal</th>
+      <td id="val_precise">1</td>
     </tr>
   </table>
 </body>
