--- a/ieee754.html
+++ b/ieee754.html
@@ -80,7 +80,7 @@
   <table>
     <tr>
       <th>represented</th>
-      <td id="val_represented">1.0000000000</td>
+      <td id="val_represented">1.0</td>
     </tr>
     <tr>
       <th>precise decimal</th>
